chnages, fixed some warnings
